# base

./: .gitignore
cmake/: CMakeLists.txt
cmake/libs/: CMakeLists.txt
cmake/libs/somelib/: CMakeLists.txt  somelib.cpp  somelib.h
cmake/src/: CMakeLists.txt  main.cpp
